--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,4 +34,12 @@
     <color name="green">#279B5E</color>
     <color name="red">#C61A1A</color>
 
+    <color name="green_light">#C8E6C9</color>
+    <color name="common_blue">#2186f3</color>
+    <color name="common_dark_grey">#616161</color>
+    <color name="common_white">#ffffff</color>
+    <color name="yellow_dark">#FFA000</color>
+    <color name="common_dark">#424242</color>
+    <color name="common_dark_grey_60">#99616161</color>
+
 </resources>
