--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,7 @@
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@color/white</item>
         <item name="android:textColor">@color/color_6c</item>
+        <item name="android:exported">false</item>
     </style>
 
     <style name="CustomDialog" parent="android:style/Theme.Dialog">
@@ -36,8 +37,19 @@
 
     <style name="AppTheme.Splash" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowNoTitle">true</item>
-        <item name="android:background">@drawable/theworld</item>
+        <item name="android:windowBackground">@drawable/theworld</item>
         <item name="android:windowTranslucentStatus">true</item>
+    </style>
+
+    <style name="BottomBtnStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">42dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_margin">16dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:background">@drawable/roundbtn_tran</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textColor">@color/btn_black_text_color</item>
     </style>
 
     <style name="BlackTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -49,6 +61,7 @@
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@color/white</item>
         <item name="android:textColor">@color/color_6c</item>
+        <item name="android:exported">false</item>
     </style>
 
 </resources>
