--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -284,7 +284,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
                     android:layout_weight="1"
-                    android:text="资料来源"
+                    android:text="物品资料"
                     android:textColor="@color/text_color_black" />
 
                 <TextView
@@ -322,36 +322,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="24dp"
                     android:text="脱俗小哥，晴空雨落，小背包"
-                    android:textColor="@color/route_view_text_color_gray"
-                    android:textSize="13sp" />
-            </LinearLayout>
-
-            <View
-                android:layout_width="wrap_content"
-                android:layout_height="0.5dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="16dp"
-                android:background="@color/line_color" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
-                    android:layout_weight="1"
-                    android:text="测试人员"
-                    android:textColor="@color/text_color_black" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="24dp"
-                    android:text="app助手群群友"
                     android:textColor="@color/route_view_text_color_gray"
                     android:textSize="13sp" />
             </LinearLayout>
@@ -411,7 +381,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="24dp"
-                    android:text="Noble.faithful，广阔的沙漠，拉面，AliceG"
+                    android:text="Noble.faithful，广阔的沙漠，孽，AliceG"
                     android:textColor="@color/route_view_text_color_gray"
                     android:textSize="13sp" />
             </LinearLayout>
