--- a/app/src/main/res/layout/fragment_equip.xml
+++ b/app/src/main/res/layout/fragment_equip.xml
@@ -6,15 +6,16 @@
     android:focusable="true"
     android:focusableInTouchMode="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_equip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/index_bg_color"
         app:tabIndicatorColor="?attr/colorAccent"
+        app:tabMode="scrollable"
         app:tabSelectedTextColor="?attr/colorAccent"
-        app:tabTextColor="@color/text_color_black"
-        app:tabMode="scrollable"/>
+        app:tabTextColor="@color/text_color_black" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/vp_equip"
