--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group
+  <!--  <group
         android:id="@+id/g1"
         android:checkableBehavior="single">
 
@@ -20,7 +20,7 @@
             android:id="@+id/nav_career"
             android:title="职业篇"
             android:icon="@drawable/ic_career" />
-    </group>
+    </group>-->
 
     <group android:id="@+id/g2"
         android:checkableBehavior="none">
